RESOLVED FIXED57219
[GTK] Fullscreen tests failing after r82084
https://bugs.webkit.org/show_bug.cgi?id=57219
Summary [GTK] Fullscreen tests failing after r82084
Sergio Villar Senin
Reported 2011-03-28 02:35:30 PDT
These ones started to fail after r82084 fullscreen/full-screen-css.html fullscreen/full-screen-iframe-allowed.html fullscreen/full-screen-remove-ancestor.html fullscreen/full-screen-remove.html fullscreen/full-screen-request.html fullscreen/full-screen-twice.html
Attachments
Patch (3.74 KB, patch)
2011-03-28 04:56 PDT, Sergio Villar Senin
no flags
Sergio Villar Senin
Comment 1 2011-03-28 02:49:57 PDT
Sergio Villar Senin
Comment 2 2011-03-28 04:56:22 PDT
Sergio Villar Senin
Comment 3 2011-03-28 09:24:24 PDT
Comment on attachment 87126 [details] Patch Clearing flags on attachment: 87126 Committed r82124: <http://trac.webkit.org/changeset/82124>
Sergio Villar Senin
Comment 4 2011-03-28 09:24:31 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 5 2011-03-28 09:56:25 PDT
Whoops, forgot that GTK also has the FULLSCREEN_API turned on. Thanks for taking care of this.
Note You need to log in before you can comment on or make changes to this bug.