2011-03-28  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fullscreen tests failing after r82084
        https://bugs.webkit.org/show_bug.cgi?id=57219

        Unskipped some fullscreen tests passing now.

        * platform/gtk/Skipped:
2011-03-28  Sergio Villar Senin  <svillar@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Fullscreen tests failing after r82084
        https://bugs.webkit.org/show_bug.cgi?id=57219

        Added the withKeyboard parameter to supportsFullScreenForElement
        method in ChromeClient. Fullscreen will be disabled for keyboard
        access by default.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::supportsFullScreenForElement):
        * WebCoreSupport/ChromeClientGtk.h:

Canonical link: https://commits.webkit.org/71926@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82124 268f45cc-cd09-0410-ab3c-d52691b4dbfc