Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.cpp
@@ -723,8 +723,11 @@ void ChromeClient::exitFullscreenForNode(Node* node)
 #endif
 
 #if ENABLE(FULLSCREEN_API)
-bool ChromeClient::supportsFullScreenForElement(const WebCore::Element* element)
+bool ChromeClient::supportsFullScreenForElement(const WebCore::Element* element, bool withKeyboard)
 {
+    if (withKeyboard)
+        return false;
+
     return true;
 }
 
