Source/WebKit/gtk/WebCoreSupport/ChromeClientGtk.h
@@ -145,7 +145,7 @@ namespace WebKit {
 #endif
 
 #if ENABLE(FULLSCREEN_API)
-        virtual bool supportsFullScreenForElement(const WebCore::Element*);
+        virtual bool supportsFullScreenForElement(const WebCore::Element*, bool withKeyboard);
         virtual void enterFullScreenForElement(WebCore::Element*);
         virtual void exitFullScreenForElement(WebCore::Element*);
 #endif
